--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,27 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Página inicial
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <button ion-button (click)="getMessages()">Entrar</button>
+
+  <div>
+    <ion-item>
+    <ion-label>Quantidade de pessoas</ion-label>
+    <ion-select [(ngModel)]="mes" interface="action-sheet">
+      <ion-option value="1">1</ion-option>
+      <ion-option value="2">2</ion-option>
+      <ion-option value="4">4</ion-option>
+      <ion-option value="10">10</ion-option>
+    </ion-select>
+  </ion-item>
+  </div>
+
+  <button ion-button (click)="getValue()">Ver valor</button>
+
 </ion-content>
