funcionando esse trem

--- a/src/pages/fila/fila.html
+++ b/src/pages/fila/fila.html
@@ -15,4 +15,10 @@
 
 <ion-content padding>
 
+
+  <div text-center>
+    <h2 no-padding no-margin>Quantidade de Mesas a sua    frente.</h2> <br><br>
+    <div class="circle center">{{qnt}}</div>
+  </div>
+
 </ion-content>
