--- a/src/pages/codigo/codigo.html
+++ b/src/pages/codigo/codigo.html
@@ -15,4 +15,9 @@
 
 <ion-content padding>
 
+  <div text-center>
+  <h2>Seu código é: </h2> <br>
+  <p class="boladao">{{codigo}}</p>
+</div>
+
 </ion-content>
